<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/action"
        android:id="@+id/action"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/deadline"
        android:layout_centerHorizontal="true"
        android:elegantTextHeight="true"
        android:minWidth="200dp"
        android:minLines="2"
        android:layout_margin="39dp" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_faire"
        android:id="@+id/status"
        android:checked="false"
        android:layout_below="@+id/deadline"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/deadline"
        android:id="@+id/deadline"
        android:inputType="date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:id="@+id/valide"
        android:layout_below="@+id/action"
        android:layout_toStartOf="@+id/calendrier" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/annuler"
        android:id="@+id/annule"
        android:layout_above="@+id/status"
        android:layout_alignLeft="@+id/action"
        android:layout_alignStart="@+id/action"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendrier"
        android:id="@+id/calendrier"
        android:layout_above="@+id/status"
        android:layout_toRightOf="@+id/deadline"
        android:layout_toEndOf="@+id/deadline" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/groupe_priorité"
        android:layout_below="@+id/valide"
        android:layout_above="@+id/annule">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priorité_faible"
            android:text="@string/priorité_faible"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priorité_normal"
            android:text="@string/priorité_normal"
            android:layout_gravity="center_horizontal" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/priorité_haute"
            android:text="@string/priorité_haute"
            android:layout_gravity="right" />
    </RadioGroup>
</RelativeLayout>


</LinearLayout>