<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TodoListMain">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/ajouter"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always"
        android:title="@string/ajouter" />
    <item
        android:id="@+id/annuler"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="always"
        android:title="@string/annulation_ajout" />
    <item
        android:id="@+id/supprimer"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"
        android:title="@string/supprimer" />

    <!-- Settings, should always be in the overflow -->
    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/> -->

</menu>